# gerritbook

./: .gitignore  .stestr.conf  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py
gerritbook/: __init__.py
gerritbook/cmds/: query.py
gerritbook/tests/: test.py
