[metadata]
name = gerritbook
summary = Query a Gerrit instance for contibutor data
description-file = README.rst
author = Tony Breeds
author-email = tony@bakeyournoodle.com
home-page = 
classifier =
    Environment :: Fixme
    Intended Audience :: Fixme
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages = gerritbook

[entry_points]
console_scripts =
    gerritbook-query = gerritbook.cmds.query:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html

[pbr]
warnerrors = True
